[gd_scene load_steps=11 format=3 uid="uid://c8en08jbxntl1"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_bygtx"]
[ext_resource type="Texture2D" uid="uid://dtft640cb4t4u" path="res://assets/graphics/Taustat/kookoskingdom.jpg" id="1_j2igv"]
[ext_resource type="Texture2D" uid="uid://b6yq758236gb1" path="res://assets/graphics/tilesets/Tilesetti2.png" id="1_kynh3"]
[ext_resource type="Texture2D" uid="uid://d01sfwsybv6tx" path="res://assets/graphics/tilesets/kookostilesetti.png" id="3_xscso"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_brv0g"]
texture = ExtResource("1_kynh3")
0:0/next_alternative_id = 7
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/2 = 2
0:0/2/flip_h = true
0:0/2/flip_v = true
0:0/2/transpose = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/4 = 4
0:0/4/flip_v = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/next_alternative_id = 5
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/2 = 2
1:0/2/transpose = true
1:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/2/physics_layer_0/angular_velocity = 0.0
1:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/3 = 3
1:0/3/flip_h = true
1:0/3/transpose = true
1:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/3/physics_layer_0/angular_velocity = 0.0
1:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/4 = 4
1:0/4/flip_v = true
1:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/4/physics_layer_0/angular_velocity = 0.0
1:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/next_alternative_id = 4
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/1 = 1
3:0/1/flip_h = true
3:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/1/physics_layer_0/angular_velocity = 0.0
3:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/2 = 2
3:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/2/physics_layer_0/angular_velocity = 0.0
3:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/3 = 3
3:0/3/flip_h = true
3:0/3/flip_v = true
3:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/3/physics_layer_0/angular_velocity = 0.0
3:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/next_alternative_id = 2
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/1 = 1
3:1/1/flip_v = true
3:1/1/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/1/physics_layer_0/angular_velocity = 0.0
3:1/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_flhxt"]
physics_layer_0/collision_layer = 5
sources/0 = SubResource("TileSetAtlasSource_brv0g")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aepmo"]
texture = ExtResource("3_xscso")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.75, -3.125, -8, 8, 8, 8, 4.5, -2.25, 0.5, 4.5)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_oinc4"]
physics_layer_0/collision_layer = 16
sources/0 = SubResource("TileSetAtlasSource_aepmo")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aggow"]
texture = ExtResource("3_xscso")
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.25, -8, -4.125, 8, 4, 8, 3.875, -8)

[sub_resource type="TileSet" id="TileSet_8jux4"]
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 8
sources/0 = SubResource("TileSetAtlasSource_aggow")

[node name="Level_1" type="Node" node_paths=PackedStringArray("PlayerSpawn")]
script = ExtResource("1_bygtx")
PlayerSpawn = NodePath("PlayerSpawn")

[node name="Taustakuva" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_j2igv")
expand_mode = 1

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2(224, 922)

[node name="tilesetti2" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_flhxt")
format = 2
layer_0/tile_data = PackedInt32Array(2162689, 131072, 0, 2162690, 131072, 0, 2162691, 131072, 0, 2162692, 131072, 0, 2162693, 131072, 0, 2162694, 131072, 0, 2162695, 131072, 0, 2162696, 131072, 0, 2162697, 131072, 0, 2162698, 131072, 0, 2162699, 131072, 0, 2162700, 131072, 0, 2162701, 131072, 0, 2162702, 131072, 0, 2162703, 131072, 0, 2162704, 131072, 0, 2162705, 131072, 0, 2162706, 131072, 0, 2162707, 131072, 0, 2162708, 131072, 0, 2162709, 131072, 0, 2162710, 131072, 0, 2162711, 131072, 0, 2162712, 131072, 0, 2162713, 131072, 0, 2162714, 131072, 0, 2162725, 131072, 0, 2162726, 131072, 0, 2162727, 131072, 0, 2162728, 131072, 0, 2162729, 131072, 0, 2162730, 131072, 0, 2162731, 131072, 0, 2162732, 131072, 0, 2162733, 131072, 0, 2162734, 131072, 0, 2162735, 131072, 0, 2162736, 131072, 0, 2162737, 131072, 0, 2162738, 131072, 0, 2162739, 131072, 0, 2162740, 131072, 0, 2162688, 131072, 0, 2097156, 65536, 0, 2097157, 65536, 0, 2097158, 196608, 131072, 2097159, 196608, 65536, 2097161, 65536, 0, 2097162, 65536, 0, 2097163, 65536, 0, 2097164, 196608, 131072, 2097160, 65536, 0, 2097155, 65536, 0, 2097165, 131072, 0, 2097167, 131072, 0, 2031631, 65536, 0, 2031632, 65536, 0, 2031633, 65536, 0, 2031634, 65536, 0, 2031635, 65536, 0, 2031636, 65536, 0, 2031637, 65536, 0, 2031638, 65536, 0, 2097174, 131072, 0, 2031630, 65536, 0, 2097166, 131072, 0, 2031629, 65536, 0, 2031628, 0, 0, 2031639, 0, 65536, 2097175, 196608, 65536, 2097173, 131072, 0, 2097172, 131072, 0, 2097171, 131072, 0, 2097170, 131072, 0, 2097169, 131072, 0, 2097168, 131072, 0, 2097176, 65536, 0, 2097177, 65536, 0, 2097178, 65536, 0, 1966087, 0, 65536, 1966086, 0, 0, 2031622, 65536, 131072, 2031623, 65536, 196608, 1769482, 0, 0, 1835021, 0, 131072, 1769483, 65536, 0, 1769484, 65536, 0, 1769485, 0, 65536, 1835018, 0, 262144, 1835019, 65536, 262144, 1835020, 65536, 262144, 1572882, 0, 0, 1572887, 0, 65536, 1769490, 0, 262144, 1638418, 65536, 131072, 1703954, 65536, 131072, 1572883, 65536, 0, 1572885, 65536, 0, 1572884, 65536, 0, 1572886, 65536, 0, 1769495, 0, 131072, 1638423, 65536, 196608, 1703959, 65536, 196608, 1769494, 65536, 262144, 1769493, 65536, 262144, 1769492, 65536, 262144, 1769491, 65536, 262144, 1638419, 131072, 0, 1703955, 131072, 0, 1638420, 131072, 0, 1703956, 131072, 0, 1638421, 131072, 0, 1703957, 131072, 0, 1638422, 131072, 0, 1703958, 131072, 0, 1769500, 0, 0, 1835036, 65536, 131072, 1966108, 65536, 131072, 1900572, 65536, 131072, 2031644, 65536, 131072, 2097179, 65536, 0, 2097180, 196608, 0, 1769502, 0, 65536, 1769501, 65536, 0, 2162715, 131072, 0, 2162716, 131072, 0, 2162717, 131072, 0, 1835037, 131072, 0, 1900573, 131072, 0, 1966109, 131072, 0, 2031645, 131072, 0, 2097181, 131072, 0, 1900575, 65536, 0, 2031649, 65536, 0, 2031650, 0, 65536, 1900576, 0, 65536, 1835038, 65536, 196608, 1966112, 65536, 196608, 1900574, 196608, 65536, 2031648, 196608, 65536, 2162722, 131072, 0, 2097186, 196608, 65536, 2162724, 131072, 0, 2162723, 131072, 0, 1966110, 131072, 0, 1966111, 131072, 0, 2031647, 131072, 0, 2097183, 131072, 0, 2097182, 131072, 0, 2031646, 131072, 0, 2162718, 131072, 0, 2162719, 131072, 0, 2162720, 131072, 0, 2097184, 131072, 0, 2097185, 131072, 0, 2162721, 131072, 0, 1769510, 0, 0, 1769511, 0, 65536, 2031655, 0, 131072, 2031659, 0, 131072, 2031663, 0, 131072, 2031666, 0, 131072, 1769522, 0, 65536, 1769519, 0, 65536, 1769515, 0, 65536, 2031654, 0, 262144, 2031658, 0, 262144, 2031662, 0, 262144, 2031665, 0, 262144, 1769521, 0, 0, 1769518, 0, 0, 1769514, 0, 0, 1835051, 65536, 196608, 1900587, 65536, 196608, 1966123, 65536, 196608, 1835047, 65536, 196608, 1900583, 65536, 196608, 1966119, 65536, 196608, 1835055, 65536, 196608, 1900591, 65536, 196608, 1966127, 65536, 196608, 1966130, 65536, 196608, 1900594, 65536, 196608, 1835058, 65536, 196608, 1966129, 65536, 131072, 1900593, 65536, 131072, 1835057, 65536, 131072, 1835054, 65536, 131072, 1900590, 65536, 131072, 1966126, 65536, 131072, 1966122, 65536, 131072, 1900586, 65536, 131072, 1835050, 65536, 131072, 1835046, 65536, 131072, 1900582, 65536, 131072, 1966118, 65536, 131072, 2162741, 131072, 0, 1966136, 0, 0, 1966139, 131072, 0, 1966138, 196608, 131072, 1966137, 65536, 0, 2031672, 65536, 131072, 2097208, 196608, 0, 2162744, 131072, 0, 2031673, 131072, 0, 2031674, 131072, 0, 2031675, 131072, 0, 2097211, 131072, 0, 2162747, 131072, 0, 2162746, 131072, 0, 2162745, 131072, 0, 2097209, 131072, 0, 2097210, 131072, 0, 1638453, 0, 0, 1638454, 0, 65536, 1703989, 0, 262144, 1703990, 0, 131072, 1441849, 0, 0, 1507385, 0, 262144, 1441850, 65536, 0, 1441851, 196608, 131072, 1507386, 131072, 0, 1507387, 131072, 0, 1310769, 0, 0, 1376305, 0, 262144, 1376309, 0, 131072, 1245238, 0, 65536, 1310774, 0, 131072, 1245237, 65536, 0, 1245236, 65536, 0, 1245235, 0, 0, 1310770, 65536, 0, 1310771, 196608, 0, 1376306, 65536, 262144, 1376307, 65536, 262144, 1376308, 65536, 262144, 1310772, 131072, 0, 1310773, 196608, 196608, 1376290, 0, 0, 1376302, 0, 65536, 1441838, 0, 131072, 1376300, 65536, 0, 1376299, 65536, 0, 1376298, 65536, 0, 1376297, 65536, 0, 1376296, 65536, 0, 1376295, 65536, 0, 1376294, 65536, 0, 1376293, 65536, 0, 1376292, 65536, 0, 1376291, 65536, 0, 1441826, 0, 262144, 1441827, 65536, 262144, 1441828, 65536, 262144, 1441829, 65536, 262144, 1441830, 65536, 262144, 1441831, 65536, 262144, 1441832, 65536, 262144, 1441833, 65536, 262144, 1441834, 65536, 262144, 1441835, 65536, 262144, 1441836, 65536, 262144, 1441837, 65536, 262144, 917531, 0, 0, 917536, 0, 65536, 983067, 65536, 131072, 1048603, 65536, 131072, 917532, 65536, 0, 917533, 65536, 0, 917534, 65536, 0, 917535, 65536, 0, 983072, 65536, 196608, 1048608, 65536, 196608, 983068, 131072, 0, 1048604, 131072, 0, 1048605, 131072, 0, 983069, 131072, 0, 983070, 131072, 0, 1048606, 131072, 0, 1048607, 131072, 0, 983071, 131072, 0, 1179680, 0, 131072, 1114144, 65536, 196608, 1114131, 65536, 0, 1114132, 65536, 0, 1114133, 65536, 0, 1114134, 65536, 0, 1114135, 65536, 0, 1114136, 65536, 0, 1114137, 65536, 0, 1114138, 65536, 0, 1179679, 65536, 262144, 1179678, 65536, 262144, 1179677, 65536, 262144, 1179676, 65536, 262144, 1179675, 65536, 262144, 1179674, 65536, 262144, 1179673, 65536, 262144, 1179672, 65536, 262144, 1179671, 65536, 262144, 1179670, 65536, 262144, 1179669, 65536, 262144, 1179668, 65536, 262144, 1179667, 65536, 262144, 1114139, 196608, 0, 1114140, 131072, 0, 1114141, 131072, 0, 1114142, 131072, 0, 1114143, 131072, 0, 655374, 0, 0, 655378, 0, 65536, 720914, 65536, 196608, 786450, 65536, 196608, 851986, 65536, 196608, 917522, 65536, 196608, 983058, 65536, 196608, 1048594, 65536, 196608, 1114130, 196608, 65536, 1179666, 65536, 262144, 1179665, 65536, 262144, 1179664, 65536, 262144, 1179663, 65536, 262144, 1179662, 0, 262144, 1114126, 65536, 131072, 1048590, 65536, 131072, 983054, 65536, 131072, 917518, 65536, 131072, 851982, 65536, 131072, 786446, 65536, 131072, 720910, 65536, 131072, 655375, 65536, 0, 655376, 65536, 0, 655377, 65536, 0, 720911, 131072, 0, 720912, 131072, 0, 720913, 131072, 0, 786449, 131072, 0, 786448, 131072, 0, 786447, 131072, 0, 851983, 131072, 0, 851984, 131072, 0, 851985, 131072, 0, 917521, 131072, 0, 917520, 131072, 0, 917519, 131072, 0, 983055, 131072, 0, 983056, 131072, 0, 983057, 131072, 0, 1048593, 131072, 0, 1048592, 131072, 0, 1048591, 131072, 0, 1114127, 131072, 0, 1114128, 131072, 0, 1114129, 131072, 0, 1441798, 0, 131072, 983046, 0, 65536, 1048582, 65536, 196608, 1114118, 65536, 196608, 1179654, 65536, 196608, 1245190, 65536, 196608, 1310726, 65536, 196608, 1376262, 65536, 196608, 983045, 65536, 0, 983044, 65536, 0, 983043, 65536, 0, 983042, 65536, 0, 983041, 131072, 0, 983040, 131072, 0, 1441797, 65536, 262144, 1441796, 65536, 262144, 1441795, 65536, 262144, 1441794, 196608, 196608, 1441793, 131072, 0, 1441792, 131072, 0, 1376261, 131072, 0, 1310725, 131072, 0, 1310724, 131072, 0, 1245188, 131072, 0, 1179652, 131072, 0, 1114116, 131072, 0, 1114117, 131072, 0, 1048581, 131072, 0, 1048580, 131072, 0, 1179653, 131072, 0, 1245189, 131072, 0, 1376260, 131072, 0, 1376259, 131072, 0, 1376258, 131072, 0, 1376257, 131072, 0, 1376256, 131072, 0, 1310720, 131072, 0, 1310721, 131072, 0, 1310722, 131072, 0, 1310723, 131072, 0, 1245187, 131072, 0, 1179651, 131072, 0, 1179650, 131072, 0, 1245186, 131072, 0, 1245185, 131072, 0, 1245184, 131072, 0, 1179648, 131072, 0, 1114112, 131072, 0, 1114113, 131072, 0, 1114114, 131072, 0, 1114115, 131072, 0, 1048579, 131072, 0, 1048578, 131072, 0, 1048577, 131072, 0, 1048576, 131072, 0, 1179649, 131072, 0, 1245198, 196608, 65537, 1245199, 196608, 65537, 1245200, 196608, 65537, 1245201, 196608, 65537, 1245202, 196608, 65537, 1245203, 196608, 65537, 1245204, 196608, 65537, 1245205, 196608, 65537, 1245206, 196608, 65537, 1245207, 196608, 65537, 1245208, 196608, 65537, 1245209, 196608, 65537, 1245210, 196608, 65537, 1245211, 196608, 65537, 1245212, 196608, 65537, 1245213, 196608, 65537, 1245214, 196608, 65537, 1245215, 196608, 65537, 1245216, 196608, 65537, 1376301, 65536, 0, 917504, 131072, 0, 851968, 131072, 0, 786432, 131072, 0, 720896, 131072, 0, 655360, 131072, 0, 589824, 131072, 0, 524288, 131072, 0, 458752, 131072, 0, 393216, 131072, 0, 327680, 131072, 0, 262144, 131072, 0, 196608, 131072, 0, 131072, 131072, 0, 65536, 131072, 0, 0, 131072, 0, 1, 131072, 0, 2, 131072, 0, 3, 131072, 0, 4, 131072, 0, 5, 131072, 0, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, 13, 131072, 0, 14, 131072, 0, 15, 131072, 0, 16, 131072, 0, 17, 131072, 0, 18, 131072, 0, 19, 131072, 0, 20, 131072, 0, 21, 131072, 0, 22, 131072, 0, 23, 131072, 0, 24, 131072, 0, 25, 131072, 0, 26, 131072, 0, 27, 131072, 0, 28, 131072, 0, 29, 131072, 0, 30, 131072, 0, 31, 131072, 0, 32, 131072, 0, 33, 131072, 0, 34, 131072, 0, 35, 131072, 0, 36, 131072, 0, 37, 131072, 0, 38, 131072, 0, 39, 131072, 0, 40, 131072, 0, 41, 131072, 0, 42, 131072, 0, 65578, 65536, 262144, 65577, 65536, 262144, 65576, 65536, 262144, 65575, 65536, 262144, 65574, 65536, 262144, 65573, 65536, 262144, 65565, 65536, 262144, 65566, 65536, 262144, 65567, 65536, 262144, 65568, 65536, 262144, 65569, 65536, 262144, 65570, 65536, 262144, 65571, 65536, 262144, 65572, 65536, 262144, 65564, 65536, 262144, 65563, 65536, 262144, 65562, 65536, 262144, 65561, 65536, 262144, 65560, 65536, 262144, 65559, 65536, 262144, 65558, 65536, 262144, 65557, 65536, 262144, 65556, 65536, 262144, 65555, 65536, 262144, 65554, 65536, 262144, 65553, 65536, 262144, 65552, 65536, 262144, 65551, 65536, 262144, 65550, 65536, 262144, 65549, 65536, 262144, 65548, 65536, 262144, 65547, 65536, 262144, 65546, 65536, 262144, 65545, 65536, 262144, 65544, 65536, 262144, 65543, 65536, 262144, 65542, 65536, 262144, 65541, 65536, 262144, 65540, 65536, 262144, 65539, 65536, 262144, 65538, 65536, 262144, 65537, 131072, 0, 131073, 65536, 196608, 196609, 65536, 196608, 262145, 65536, 196608, 327681, 65536, 196608, 393217, 65536, 196608, 458753, 65536, 196608, 655361, 65536, 196608, 720897, 65536, 196608, 786433, 65536, 196608, 851969, 65536, 196608, 917505, 65536, 196608, 589825, 65536, 196608, 524289, 65536, 196608, 65579, 65536, 262144, 65580, 65536, 262144, 65581, 65536, 262144, 65582, 65536, 262144, 65583, 65536, 262144, 65584, 65536, 262144, 65585, 65536, 262144, 65586, 65536, 262144, 65587, 65536, 262144, 65588, 65536, 262144, 65589, 65536, 262144, 65590, 65536, 262144, 65591, 65536, 262144, 65592, 65536, 262144, 65593, 65536, 262144, 65594, 65536, 262144, 1376315, 65536, 131072, 1310779, 65536, 131072, 1245243, 65536, 131072, 1179707, 65536, 131072, 1114171, 65536, 131072, 1048635, 65536, 131072, 983099, 65536, 131072, 917563, 65536, 131072, 852027, 65536, 131072, 786491, 65536, 131072, 720955, 65536, 131072, 655419, 65536, 131072, 589883, 65536, 131072, 131131, 65536, 131072, 196667, 65536, 131072, 262203, 65536, 131072, 327739, 65536, 131072, 393275, 65536, 131072, 458811, 65536, 131072, 524347, 65536, 131072, 65595, 131072, 0, 59, 131072, 0, 58, 131072, 0, 57, 131072, 0, 56, 131072, 0, 55, 131072, 0, 54, 131072, 0, 53, 131072, 0, 52, 131072, 0, 51, 131072, 0, 50, 131072, 0, 49, 131072, 0, 48, 131072, 0, 47, 131072, 0, 46, 131072, 0, 45, 131072, 0, 44, 131072, 0, 43, 131072, 0, 1572923, 131072, 0, 1638459, 131072, 0, 1703995, 131072, 0, 1769531, 131072, 0, 1835067, 131072, 0, 1900603, 131072, 0, 1572922, 65536, 131072, 1638458, 65536, 131072, 1703994, 65536, 131072, 1769530, 65536, 131072, 1835066, 65536, 131072, 1900602, 65536, 131072, 2097187, 65536, 0, 2097188, 65536, 0, 2097189, 65536, 0, 2097190, 65536, 0, 2097191, 65536, 0, 2097192, 65536, 0, 2097193, 65536, 0, 2097194, 65536, 0, 2097195, 65536, 0, 2097196, 65536, 0, 2097197, 65536, 0, 2097198, 65536, 0, 2097199, 65536, 0, 2097200, 65536, 0, 2097201, 65536, 0, 2097202, 65536, 0, 2097203, 65536, 0, 2097204, 65536, 0, 2097205, 65536, 0, 2097206, 65536, 0, 2097207, 65536, 0, 2162743, 131072, 0, 2162742, 131072, 0, 1507330, 65536, 196608, 1572866, 65536, 196608, 1638402, 65536, 196608, 1703938, 65536, 196608, 1769474, 65536, 196608, 1835010, 65536, 196608, 1900546, 65536, 196608, 1966082, 65536, 196608, 2031618, 65536, 196608, 2097154, 196608, 65536, 2097153, 131072, 0, 2097152, 131072, 0, 2031616, 131072, 0, 1966080, 131072, 0, 1900544, 131072, 0, 1835008, 131072, 0, 1769472, 131072, 0, 1703936, 131072, 0, 1638400, 131072, 0, 1572864, 131072, 0, 1507328, 131072, 0, 1507329, 131072, 0, 1572865, 131072, 0, 1638401, 131072, 0, 1703937, 131072, 0, 1769473, 131072, 0, 1835009, 131072, 0, 1900545, 131072, 0, 1966081, 131072, 0, 2031617, 131072, 0)

[node name="Hazard" type="TileMap" parent="."]
tile_set = SubResource("TileSet_oinc4")
format = 2
layer_0/name = "fobar"
layer_0/tile_data = PackedInt32Array(4128816, 196608, 1, 4128817, 196608, 1, 4128818, 196608, 1, 4128819, 196608, 1, 4128820, 196608, 1, 4128821, 196608, 1, 4128822, 196608, 1, 4128823, 196608, 1, 2162726, 196608, 1, 2162727, 196608, 1, 2162728, 196608, 1, 2162729, 196608, 1, 2162730, 196608, 1, 2162731, 196608, 1, 2162732, 196608, 1, 2162733, 196608, 1, 2162734, 196608, 1, 2162735, 196608, 1, 2162736, 196608, 1, 2162737, 196608, 1, 2162738, 196608, 1, 2162739, 196608, 1, 2162740, 196608, 1, 2162741, 196608, 1, 3997723, 196608, 1, 3997736, 196608, 1, 3997738, 196608, 1, 3080232, 196608, 1, 3080235, 196608, 1, 3997727, 196608, 1, 3080239, 196608, 1)

[node name="Ladder" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8jux4")
format = 2
layer_0/tile_data = PackedInt32Array(3145763, 262144, 1, 3211299, 262144, 1, 3276835, 262144, 1, 3342371, 262144, 1, 3407907, 262144, 1, 3473443, 262144, 1, 3538979, 262144, 1, 3604515, 262144, 1, 3670051, 262144, 1, 3735587, 262144, 1, 3801123, 262144, 1, 3866659, 262144, 1, 3932195, 262144, 1, 3997731, 262144, 1, 3538999, 262144, 1, 3604535, 262144, 1, 3670071, 262144, 1, 3735607, 262144, 1, 3801143, 262144, 1, 3539019, 262144, 1, 3604555, 262144, 1, 3670091, 262144, 1, 3735627, 262144, 1, 3801163, 262144, 1, 3866699, 262144, 1, 3932235, 262144, 1, 3997771, 262144, 1, 4063307, 262144, 1, 4128843, 262144, 1, 4194379, 262144, 1, 4259915, 262144, 1, 3473513, 262144, 1, 3407977, 262144, 1, 3342441, 262144, 1, 3276905, 262144, 1, 2883697, 262144, 1, 2949233, 262144, 1, 3014769, 262144, 1, 3080305, 262144, 1, 3145841, 262144, 1, 3211377, 262144, 1, 3276913, 262144, 1, 3342449, 262144, 1, 2490478, 262144, 1, 2556014, 262144, 1, 2621550, 262144, 1, 2687086, 262144, 1, 2752622, 262144, 1, 2818158, 262144, 1, 1835074, 262144, 1, 1900610, 262144, 1, 1966146, 262144, 1, 2031682, 262144, 1, 2097218, 262144, 1, 2293826, 262144, 1, 2228290, 262144, 1, 2162754, 262144, 1, 2359362, 262144, 1, 2424898, 262144, 1, 2490434, 262144, 1, 2555970, 262144, 1, 2621506, 262144, 1, 2687042, 262144, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartNewButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 12.0
offset_right = 355.0
offset_bottom = 151.0
text = "Start New Game"

[connection signal="button_up" from="Control/StartNewButton" to="." method="_on_start_new_button_button_up"]
